Criação de migrations e população do banco de dados

--- a/desafio-API-Lista-de-tarefas-CSharp.csproj
+++ b/desafio-API-Lista-de-tarefas-CSharp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>desafio_API_Lista_de_tarefas_CSharp</RootNamespace>
   </PropertyGroup>
